--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "php": ">=7.1",
-        "mdanter/ecc": "v0.4.*",
+        "ricco381/ecc": "0.1",
         "ext-gmp": "*"
     },
     "require-dev": {
